fix: remove scroll on ios safari

--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,5 @@ code {
 
 #root {
   height: 100vh;
+  height: 100dvb;
 }
